<?xml version="1.0"?>
<package format="2">
  <name>moma_gazebo</name>
  <version>0.0.0</version>
  <description>The moma_gazebo package</description>

  <maintainer email="michel.breyer@mavt.ethz.ch">Michel Breyer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moma_description</depend>
  <depend>panda_moveit_config</depend>
  <depend>roboticsgroup_gazebo_plugins</depend>
  <depend>ridgeback_control</depend>
  <depend>royalpanda_moveit_config</depend>

  <exec_depend>gazebo_ros</exec_depend>
  
  <!-- <exec_depend>elevation_mapping</exec_depend> -->
  <exec_depend>earth_moving_planner</exec_depend>
  <!-- <exec_depend>grid_map_rviz_plugin</exec_depend> -->
  <exec_depend>franka_ros</exec_depend>
  <exec_depend>moma_bringup</exec_depend>
  <exec_depend>moma_utils</exec_depend>
  <!-- <exec_depend>pico_flexx_driver</exec_depend> -->

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/apriltags"/>
    <gazebo_ros gazebo_media_path="${prefix}/models/apriltags"/>
  </export>

</package>